--- a/form-wave/index.html
+++ b/form-wave/index.html
@@ -8,14 +8,18 @@
   </head>
   <body>
     <div class="container">
-      <form action="">
-        <h2>Please Login</h2>
-        <label for="email">Email</label>
-        <input type="text" required />
-        <label for="email">Password</label>
-        <input type="password" required />
-        <button>Login</button>
-        <p>Don't have an account?<span>Register</span></p>
+      <h1>Please Login</h1>
+      <form>
+        <div class="form-control">
+          <input type="text" required />
+          <label>Email</label>
+        </div>
+        <div class="form-control">
+          <input type="password" required />
+          <label>Password</label>
+        </div>
+        <button class="btn">Login</button>
+        <p class="text">Don't have an account?<a href="#">Register</a></p>
       </form>
     </div>
     <script src="script.js"></script>
