--- a/drink-water/index.html
+++ b/drink-water/index.html
@@ -7,21 +7,29 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <h1>Drink Water</h1>
-      <p>Goal: 2 Liters</p>
-      <div class="bottle">100%</div>
-      <p>Select how many glasses of water that you have drank</p>
-      <div class="bottle-conta iner">
-        <div class="small-bottle"></div>
-        <div class="small-bottle"></div>
-        <div class="small-bottle"></div>
-        <div class="small-bottle"></div>
-        <div class="small-bottle"></div>
-        <div class="small-bottle"></div>
-        <div class="small-bottle"></div>
-        <div class="small-bottle"></div>
+    <h1>Drink Water</h1>
+    <h3>Goal: 2 Liters</h3>
+
+    <div class="cup">
+      <div class="remained" id="remained">
+        <span id="liters"></span>
+        <small>Remained</small>
       </div>
+
+      <div class="percentage" id="percentage"></div>
+    </div>
+
+    <p class="text">Select how many glasses of water that you have drank</p>
+
+    <div class="cups">
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
+      <div class="cup cup-small">250 ml</div>
     </div>
     <script src="script.js"></script>
   </body>
