changes in movie app

--- a/movie-app/index.html
+++ b/movie-app/index.html
@@ -7,9 +7,12 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
-      <input type="text" placeholder="Search" />
-    </nav>
+    <header>
+      <form id="form">
+        <input type="text" id="search" class="search" placeholder="Search" />
+      </form>
+    </header>
+    <main id="main"></main>
     <script src="script.js"></script>
   </body>
 </html>
