changes in theme clock

--- a/theme-clock/index.html
+++ b/theme-clock/index.html
@@ -8,11 +8,18 @@
   </head>
   <body>
     <div class="container">
-      <button class="dark-mode-btn" id="drk-mode-btn">Dark mode</button>
-      <div class="clock"></div>
-      <div class="time"></div>
-      <div class="date"></div>
+      <button class="toggle">Dark mode</button>
+      
+    <div class="clock-container">
+        <div class="clock">
+          <div class="needle hour"></div>
+          <div class="needle minute"></div>
+          <div class="needle second"></div>
+          <div class="center-point"></div>
+        </div>
     </div>
+    <div class="time"></div>
+    <div class="date"></div>
     <script src="script.js"></script>
   </body>
 </html>
