--- a/drag-n-drop/index.html
+++ b/drag-n-drop/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Drag and Drop</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="container">
@@ -13,5 +14,6 @@
       <div class="box"></div>
       <div class="box"></div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
