--- a/drag-n-drop/index.html
+++ b/drag-n-drop/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
-      <div class="box"></div>
+    <div class="empty">
+      <div class="fill" draggable="true"></div>
     </div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
     <script src="script.js"></script>
   </body>
 </html>
