--- a/drawing-app/index.html
+++ b/drawing-app/index.html
@@ -7,6 +7,14 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <canvas id="canvas" width="800" height="700"></canvas>
+    <div class="toolbox">
+      <button id="decrease">-</button>
+      <span id="size">10</span>
+      <button id="increase">+</button>
+      <input type="color" id="color" />
+      <button id="clear">X</button>
+    </div>
     <script src="script.js"></script>
   </body>
 </html>
