--- a/content-placeholder/index.html
+++ b/content-placeholder/index.html
@@ -8,29 +8,29 @@
   </head>
   <body>
     <div class="card">
-      <div class="card-header" id="header">
-        <img
-          src="https://images.unsplash.com/photo-1496181133206-80ce9b88a853?ixlib=rb-1.2.1&amp;ixid=eyJhcHBfaWQiOjEyMDd9&amp;auto=format&amp;fit=crop&amp;w=2102&amp;q=80"
-          alt=""
-        />
-      </div>
+      <div class="card-header animated-bg" id="header">&nbsp;</div>
 
       <div class="card-content">
-        <h3 class="card-title" id="title">Lorem ipsum dolor sit amet</h3>
+        <h3 class="card-title animated-bg animated-bg-text" id="title">
+          &nbsp;
+        </h3>
         <p class="card-excerpt" id="excerpt">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolore
-          perferendis
+          &nbsp;
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
+          <span class="animated-bg animated-bg-text">&nbsp;</span>
         </p>
         <div class="author">
-          <div class="profile-img" id="profile_img">
-            <img src="https://randomuser.me/api/portraits/men/45.jpg" alt="" />
-          </div>
+          <div class="profile-img animated-bg" id="profile_img">&nbsp;</div>
           <div class="author-info">
-            <strong class="" id="name">John Doe</strong>
-            <small class="" id="date">Oct 08, 2020</small>
+            <strong class="animated-bg animated-bg-text" id="name"
+              >&nbsp;</strong
+            >
+            <small class="animated-bg animated-bg-text" id="date">&nbsp;</small>
           </div>
         </div>
       </div>
     </div>
+    <script src="script.js"></script>
   </body>
 </html>
