changes in toast notifications

--- a/toast-notification/index.html
+++ b/toast-notification/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="notification"></div>
+    <div id="toasts"></div>
     <button class="btn" id="button">Show Notification</button>
     <script src="script.js"></script>
   </body>
