--- a/auto-text-effect/index.html
+++ b/auto-text-effect/index.html
@@ -7,12 +7,19 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <div class="container">
-      <span>We Love Programming</span>
-    </div>
-    <div class="speed">
-      <span>Speed:</span>
-      <input type="number" id="speed" />
+    <h1 id="text">Starting...</h1>
+
+    <div>
+      <label for="speed">Speed:</label>
+      <input
+        type="number"
+        name="speed"
+        id="speed"
+        value="1"
+        min="1"
+        max="10"
+        step="1"
+      />
     </div>
     <script src="script.js"></script>
   </body>
